Terminando configuração swagger
