# Achamigos_Back-End-P.I-3/routes/UserRoute.js
@@ -3,7 +3,8 @@ const router = express.Router();
 
 const userController = require('../controllers/UserController')
 
-router.post('/users', userController.cadastrarUser)
+router.get('/users', userController.listarUser)
+// router.post('/users', userController.cadastrarUser)
 router.put('/users/:id', userController.alterarUser)
 router.delete('/users/:id', userController.excluirUser)
 
